# llm-usage

./: .gitignore  5-12-enhancements.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  config.example.toml  deny.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
archived/: README.md
archived/providers/: gemini_cli.rs  openai.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: cli_integration.rs
crates/core/: Cargo.toml
crates/core/examples/: dump_codex_cloud.rs  dump_ollama_cloud.rs  print_snapshots.rs
crates/core/src/: anthropic_oauth.rs  autostart.rs  chatgpt_oauth.rs  config.rs  lib.rs  model.rs  opencode.rs  pricing.rs  provider.rs  quota.rs  snapshots_io.rs  storage.rs  updates.rs
crates/core/src/providers/: anthropic.rs  antigravity.rs  codex_cli.rs  mod.rs  ollama_cloud.rs  ollama_local.rs
crates/dashboard/: Cargo.toml
crates/dashboard/src/: history.rs  main.rs  settings.rs
crates/setup/: Cargo.toml
crates/setup/src/: main.rs
crates/ui/: Cargo.toml
crates/ui/src/: icon.rs  main.rs  runtime.rs
docs/: coverage-plan.md  launch-readiness.md  next-pass.md
packaging/linux/: llm-usage.desktop
packaging/macos/: Info.extra.plist  dev.buffbit.llm-usage.plist
packaging/test/: empty-config.toml
