[workspace]
resolver = "2"
members = ["crates/core", "crates/ui", "crates/dashboard", "crates/setup", "crates/cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/oberonix/llm-usage"
rust-version = "1.80"

# Workspace-wide clippy tuning. These opt-outs silence style lints
# that flagged a lot of test code without identifying real bugs,
# so CI can enforce `-D warnings` without false-positive noise.
[workspace.lints.clippy]
# `let mut cfg = Config::default(); cfg.x = …;` reads more linearly
# than a struct literal when the test is setting up just one or two
# fields against a wide default.
field_reassign_with_default = "allow"
# Cargo binaries keep their main `fn` and helpers in the same
# `main.rs` as the `mod tests` block. Reordering would mean hundreds
# of lines of churn for a purely stylistic preference.
items_after_test_module = "allow"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "fs"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip"] }
rusqlite = { version = "0.31", features = ["bundled"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
directories = "5"
dirs = "5"
notify = "7"
notify-rust = "4"
walkdir = "2"
once_cell = "1"
scraper = "0.20"
regex = "1"
semver = "1"
tao = "0.34"
wry = "0.55"
cookie = "0.18"
rookie = "0.5"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
opt-level = "z"
panic = "abort"
