[package]
name = "llm-usage"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
# Binary-only crate — distributed as a built artifact, not via
# crates.io. Marking unpublishable also lets cargo-deny accept
# the path-deps below without insisting on explicit versions.
publish = false

[[bin]]
name = "llm-usage"
path = "src/main.rs"

[dependencies]
llm-usage-core = { path = "../core" }
anyhow.workspace = true
tokio.workspace = true
# `tracing` is used transitively via `tracing-subscriber`'s
# `tracing` re-export; the cli main only calls the subscriber.
tracing-subscriber.workspace = true
chrono.workspace = true
notify.workspace = true

[dev-dependencies]
# Spawn the built `llm-usage` binary and assert on its
# stdout / stderr / exit code. Used by the integration tests
# under `tests/`.
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[lints]
workspace = true
