[package]
name = "llm-usage-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tokio.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
directories.workspace = true
dirs.workspace = true
walkdir.workspace = true
scraper.workspace = true
regex.workspace = true
semver.workspace = true
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
wiremock = "0.6"


[lints]
workspace = true
