[package]
name = "llm-usage-dashboard"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[[bin]]
name = "llm-usage-dashboard"
path = "src/main.rs"

[dependencies]
llm-usage-core = { path = "../core" }
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui = "0.29"
toml.workspace = true
chrono.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
walkdir.workspace = true
serde.workspace = true
serde_json.workspace = true
dirs.workspace = true
rookie.workspace = true
notify.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
