[package]
name = "llm-usage-tray"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[[bin]]
name = "llm-usage-tray"
path = "src/main.rs"

[dependencies]
llm-usage-core = { path = "../core" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
chrono.workspace = true
notify.workspace = true
notify-rust.workspace = true
dirs.workspace = true
tray-icon = "0.21"
tao = "0.34"
image = { version = "0.25", default-features = false, features = ["png"] }

[dev-dependencies]
# Lets runtime.rs tests implement the async `Provider` trait via
# fake doubles. Production code in this crate doesn't touch the
# trait directly — providers come pre-boxed from core.
async-trait = "0.1"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"

[package.metadata.bundle]
name = "llm-usage"
identifier = "dev.buffbit.llm-usage"
icon = ["../../assets/icon.png"]
short_description = "Menu bar widget for LLM account usage and spend"
long_description = "Lightweight tray app that shows current quota usage (and optional spend) across Anthropic, Codex CLI, and Ollama Cloud, with threshold alerts."
category = "DeveloperTool"
osx_minimum_system_version = "11.0"
osx_info_plist_exts = ["../../packaging/macos/Info.extra.plist"]

[lints]
workspace = true
